vlib/v/parser/tests/struct_init_without_struct_name_err.vv
struct Page {
    contents int
}

fn main () {
    pages := []Page{}
    pages << {
        contents: 3
    }
}
